index.css
/* ... */
.four-areas-of {
  	max-width: 490px;
  	width: 100%;
  	position: relative;
  	font-size: 16px;
  	letter-spacing: -0.02em;
  	line-height: 150%;
  	color: #455b49;
  	display: inline-block;
}
.begin-cta2 {
  	box-shadow: 0px 2px 8.2px rgba(37, 56, 40, 0.59) inset;
  	border-radius: 8px;
  	background: linear-gradient(90deg, #0c120d, #253828);
  	display: flex;
  	align-items: center;
  	justify-content: center;
  	padding: 16px 20px;
  	font-size: 16px;
  	color: #f2f2f0;
}
.carousel {
  	align-self: stretch;
  	display: flex;
  	align-items: center;
  	gap: 28px;
  	font-size: 32px;
  	font-family: 'Inria Serif';
}
.options {
  	display: flex;
  	flex-direction: column;
  	align-items: flex-start;
  	gap: 16px;
  	flex-shrink: 0;
}
.performance2 {
  	width: 280px;
  	height: 120px;
  	position: relative;
  	border-radius: 16px;
  	background: linear-gradient(121.67deg, #f1ebdf, #ba9a81), linear-gradient(#f1ebdf, #f1ebdf);
  	border: 1.5px solid #e6ded1;
  	box-sizing: border-box;
  	overflow: hidden;
  	flex-shrink: 0;
}
.text {
  	position: absolute;
  	top: calc(50% - 28.5px);
  	left: 28px;
  	display: flex;
  	flex-direction: column;
  	align-items: flex-start;
  	justify-content: center;
  	gap: 4px;
}
.weight2 {
  	position: relative;
  	letter-spacing: -0.02em;
  	line-height: 100%;
}
.glp-1-metabolic {
  	position: relative;
  	font-size: 14px;
  	letter-spacing: -0.02em;
  	line-height: 150%;
  	font-family: Inter;
  	color: rgba(12, 18, 13, 0.6);
}
.information-card {
  	height: clamp(420px, 38vw, 528px);
  	width: 100%;
  	max-width: 940px;
  	flex: 1 1 auto;
  	position: relative;
  	border-radius: 16px;
  	background-color: #fff;
  	overflow: hidden;
  	font-size: 36px;
  	color: #fff;
  	font-family: Inter;
}
.bg-image-icon {
  	position: absolute;
  	inset: 0;
  	width: 100%;
  	height: 100%;
  	object-fit: cover;
}
.black-gradient2 {
  	position: absolute;
  	bottom: 0px;
  	left: 0;
  	background: linear-gradient(0deg, #000, rgba(0, 0, 0, 0));
  	width: 100%;
  	height: 476px;
}
.text5 {
  	position: absolute;
  	top: 332px;
  	left: 24px;
  	right: 24px;
  	width: auto;
  	max-width: 513px;
  	display: flex;
  	flex-direction: column;
  	align-items: flex-start;
  	gap: 16px;
}
.descriptive-text {
  	align-self: stretch;
  	display: flex;
  	flex-direction: column;
  	align-items: flex-start;
  	gap: 4px;
}
.weight3 {
  	align-self: stretch;
  	position: relative;
  	letter-spacing: -0.02em;
  	font-weight: 500;
}
.a-metabolic-protocol {
  	max-width: 513px;
  	width: 100%;
  	position: relative;
  	font-size: 16px;
  	letter-spacing: -0.02em;
  	line-height: 150%;
  	display: inline-block;
}
.information {
  	display: flex;
  	align-items: center;
  	gap: 42px;
  	font-size: 16px;
}
.weeks-parent {
  	width: 81px;
  	display: flex;
  	flex-direction: column;
  	align-items: flex-start;
  	gap: 2px;
}
.to-first-results {
  	align-self: stretch;
  	position: relative;
  	font-size: 12px;
  	letter-spacing: -0.02em;
  	line-height: 150%;
  	font-weight: 500;
  	color: rgba(255, 255, 255, 0.8);
}
.information-child {
  	height: 29px;
  	width: 1px;
  	position: relative;
  	border-right: 1px solid #fff;
  	box-sizing: border-box;
}
.monthly-parent {
  	width: 110px;
  	display: flex;
  	flex-direction: column;
  	align-items: flex-start;
  	gap: 2px;
}
.monthly {
  	align-self: stretch;
  	position: relative;
  	letter-spacing: -0.02em;
  	line-height: 150%;
  	font-weight: 500;
}
.learn-more-cta {
  	position: absolute;
  	bottom: 24px;
  	right: 24px;
  	backdrop-filter: blur(32.3px);
  	border-radius: 8px;
  	background: linear-gradient(90deg, #e9eed3, #ba9a81);
  	border: 1px solid #374535;
  	display: flex;
  	align-items: center;
  	justify-content: center;
  	padding: 16px 20px;
  	font-size: 16px;
  	color: #0d0f0e;
}
.ongoing-relationship {
  	width: 100%;
  	aspect-ratio: 1440 / 1819;
  	position: relative;
  	border-radius: 40px;
  	overflow: hidden;
  	flex-shrink: 0;
  	text-align: center;
  	font-size: 32px;
  	color: #d6d6d6;
}
.background-icon2 {
  	position: absolute;
  	inset: 0;
  	border-radius: 40px;
  	width: 100%;
  	height: 100%;
  	object-fit: cover;
  	flex-shrink: 0;
}
.bottom-element {
  	position: absolute;
  	top: 60.582%;
  	left: 50%;
  	transform: translateX(-50%);
  	width: 86.667%;
  	max-width: 1248px;
  	display: flex;
  	flex-direction: column;
  	align-items: center;
  	gap: 56px;
  	flex-shrink: 0;
}
.lower-text {
  	display: flex;
  	flex-direction: column;
  	align-items: center;
  	gap: 20px;
}
.most-telehealth-ends-container {
  	max-width: 921px;
  	width: 100%;
  	position: relative;
  	letter-spacing: -0.02em;
  	line-height: 120%;
  	font-weight: 500;
  	display: inline-block;
}
.most-telehealth-ends {
  	color: #ba9a81;
  	line-height: 120%;
}
.after-checkout-yours {
  	line-height: 120%;
}
.care-team-that {
  	color: #e4d8c9;
  	line-height: 120%;
}
.start-your-journey-cta {
  	border-radius: 8px;
  	background: linear-gradient(90deg, #e9eed3, #ba9a81), linear-gradient(#f1ebdf, #f1ebdf);
  	border: 1px solid #374535;
  	display: flex;
  	align-items: center;
  	justify-content: center;
  	padding: 16px 20px;
  	text-align: left;
  	font-size: 16px;
  	color: #0c120d;
}
.cards {
  	align-self: stretch;
  	display: grid;
  	grid-template-columns: repeat(4, 1fr);
  	gap: 13.3px;
  	text-align: left;
  	font-size: 24px;
  	color: #fff;
}
.card-01 {
  	height: 418px;
  	width: 100%;
  	max-width: 302px;
  	position: relative;
  	border-radius: 12px;
  	background-color: #fff;
  	border: 1px solid #8d6868;
  	box-sizing: border-box;
  	overflow: hidden;
  	flex-shrink: 0;
}
.bg-icon {
  	position: absolute;
  	inset: 0;
  	width: 100%;
  	height: 100%;
  	object-fit: cover;
  	flex-shrink: 0;
}
.gradient {
  	position: absolute;
  	bottom: 0px;
  	left: 0;
  	background: linear-gradient(180deg, rgba(0, 0, 0, 0), #000);
  	width: 100%;
  	height: 298px;
  	flex-shrink: 0;
}
/* ... */

